required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (5.3-dev, SVN trunk):
------------------------------------

- Exposed PIXELS value via URL configuration

- Add Support for SLD TextSymbolizer HALO and ANGLE (#2806)

- IGNORE_MISSING_DATA: largely replaced by run-time CONFIG property,
  ON_MISSING_DATA, which supports three modes: FAIL, LOG, and IGNORE.
  (#2785) ms-rfc-47.txt

- mapstring.c: msStringTrim(*char str), front-and-back whitespace trimmer

- mappostgis.c: re-write to remove binary cursors and break up 
  logic into smaller parts, add support for maxfeatures

- mapogcfilter.c: increase array size (code was assigning to out
  of bounds subscript)

- MapScript: Added getBinding method to label and style object (#2670)

- mapowscommon.c: use strcasecmp to check for language value

- raster query fix for tileindex with relative paths (#2722)

- Fixed msOGRGetValues function to return default values if the object 
  type is not TEXT. (#2311)

- Fix for the access violation caused by msMSSQL2008LayerGetShape (#2795)

- Fixed msMSSQL2008LayerGetItems to retrieve the column names properly (#2791)

- Prevent from calling msMSSQL2008CloseConnection from msMSSQL2008LayerClose
  causing memory corruption issues (#2790) 

- new polygon label placement algorithm (#2793)

- stop drawing an artificial outline around polygons to ensure
  continuity - users needing this feature will have to explicitely
  add an outlinecolor of the same color as the fill color

- added formatoption QUANTIZE_NEW to force going through the pngquant 
  quantization algorithm instead of the GD one for imagemode RGB (the 
  GD one can be kind of buggy)
