@@ -12,6 +12,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (5.3-dev, SVN trunk):
 ------------------------------------
 
+- Added removeLayer function to mapObj in PHP/MapScript. (#762)
+
 - Exposed PIXELS value via URL configuration
 
 - Add Support for SLD TextSymbolizer HALO and ANGLE (#2806)
